--- a/install
+++ b/install
@@ -1,5 +1,5 @@
 #!/usr/bin/env bash
-cd $HOME/KKKKK
+cd $HOME/kkkkk
 install() {
 rm -rf $HOME/.telegram-cli
 sudo apt-get update -y
@@ -19,10 +19,10 @@ sudo apt-get install libstdc++6 -y
 sudo apt-get install lua-lgi -y
 sudo apt-get install libnotify-dev -y
 sudo chmod +x tg
-lua KKKKK.lua
-sudo chmod +x KKKKK
-sudo chmod +x ./xc
-./xc
+lua kkkkk.lua
+sudo chmod +x kkkkk
+sudo chmod +x ./BK
+./BK
 }
 if [ "$1" = "install" ]; then
 install
@@ -32,8 +32,8 @@ echo "Tg Is Not Found"
 exit 1
 fi
 sudo chmod +x tg
-lua KKKKK.lua
-sudo chmod +x KKKKK
-sudo chmod +x ./xc
-./xc
+lua kkkkk.lua
+sudo chmod +x kkkkk
+sudo chmod +x ./BK
+./BK
 fi
