--- a/install
+++ b/install
@@ -21,8 +21,8 @@ sudo apt-get install libnotify-dev -y
 sudo chmod +x tg
 lua KKKKK.lua
 sudo chmod +x KKKKK
-sudo chmod +x ./XC
-./XC
+sudo chmod +x ./BK
+./BK
 }
 if [ "$1" = "install" ]; then
 install
@@ -34,6 +34,6 @@ fi
 sudo chmod +x tg
 lua KKKKK.lua
 sudo chmod +x KKKKK
-sudo chmod +x ./XC
-./XC
+sudo chmod +x ./BK
+./BK
 fi
